@@ -2,7 +2,6 @@ package org.opencds.cqf.fhir.utility.adapter.r4;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.hl7.fhir.instance.model.api.IDomainResource;
 import org.hl7.fhir.r4.model.ElementDefinition;
 import org.hl7.fhir.r4.model.Expression;
@@ -126,13 +125,13 @@ public class StructureDefinitionAdapter extends KnowledgeArtifactAdapter impleme
     public List<IElementDefinitionAdapter> getSnapshotElements() {
         return get().getSnapshot().getElement().stream()
                 .map(adapterFactory::createElementDefinition)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<IElementDefinitionAdapter> getDifferentialElements() {
         return get().getDifferential().getElement().stream()
                 .map(adapterFactory::createElementDefinition)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
